# WeaverBot

./: .env.example  alembic.ini  main.py  pyproject.toml
bot/: __main__.py  config.py
bot/db/: __init__.py  models.py  session.py
bot/formatters/: transcription.py
bot/handlers/: settings.py  voice.py
bot/keyboards/: settings.py
bot/repositories/: user_settings.py
bot/services/: soundweaver.py
docs/superpowers/plans/: 2026-04-26-telegram-speech-bot.md
docs/superpowers/specs/: 2026-04-26-telegram-speech-bot-design.md
migrations/: env.py
migrations/versions/: 597b61c60d33_init.py
tests/: conftest.py  test_config.py
tests/formatters/: test_transcription.py
tests/handlers/: test_settings.py  test_voice.py
tests/repositories/: test_user_settings.py
tests/services/: test_soundweaver.py
