[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weaverbot"
version = "0.1.0"
description = "Telegram speech-to-text bot for ID.SoundWeaver"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.18.0,<4.0.0",
  "httpx>=0.28.0,<0.29.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "greenlet>=3.1.0,<4.0.0",
  "alembic>=1.18.4",
  "black>=26.3.1",
  "psycopg[binary]>=3.3.3",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0,<0.22.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<0.27.0",
  "respx>=0.22.0,<0.23.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0,<0.22.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<0.27.0",
  "respx>=0.22.0,<0.23.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
